# CPlusPlus

./: .gitignore  .gitmodules  README.md
CMakeLearning/GoogleTestExample/01Example/tests/: CMakeLists.txt  multiply_test.cpp
CMakeLearning/GoogleTestExample/02Example/: CMakeLists.txt
CMakeLearning/GoogleTestExample/02Example/src/: Formula.h
CMakeLearning/GoogleTestExample/02Example/tst/: Formula-test.cpp
CMakeLearning/GoogleTestExample/03Example/: Test.cpp
CMakeLearning/GoogleTestExample/04Example/: CMakeLists.txt  tests.cpp
CPlusPlusConcurrencyInAction/: listing2.2.cpp  listing2.4.cpp  listing2.5.cpp  listing2.7.cpp  listing3.1.cpp  listing3.11.cpp  listing3.12  listing3.13.cpp  listing3.2  listing3.2.cpp  listing3.3  listing3.3.cpp  listing3.6  listing3.6.cpp  listing3.7.cpp  listing3.8.cpp  listing3.9.cpp  listing4.1.cpp  listing4.4.cpp  listing4.7.cpp  listing4.9
Company/Factorial/: Factorial.sln
Company/Factorial/Factorial/: Factorial.cpp  Factorial.vcxproj
Company/HelloWorld/: .gitignore  helloworld.cpp
Learning/CMakeLearning/CMakeInit/: CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
Learning/CMakeLearning/CMakeInit/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
Learning/CMakeLearning/CMakeInit/source/: lib.cpp
Learning/CMakeLearning/CMakeInit/test/: CMakeLists.txt
Learning/CMakeLearning/CMakeInit/test/source/: CMakeInit_test.cpp
Learning/CMakeLearning/CMakeProjectWithMultiFiles/: CMakeLists.txt
Learning/CMakeLearning/CMake_GTest_Conan/: CMakeUserPresets.json  conanfile.txt  run_gen_test_report_preset.bat  run_gen_test_report_preset.sh
Learning/CMakeLearning/CMake_GTest_Conan/profiles/: windows_gcc  windows_gcc_coverage_user
Learning/CMakeLearning/CMake_GTest_Conan/scripts/: build.sh  clean-build.sh  file_util.py  gen_test_report.py  gen_test_report_preset.py
Learning/CMakeLearning/CMake_GTest_Conan/tests/: CMakeLists.txt
Learning/CMakeLearning/CMake_GTest_FetchContent/: CMakeLists.txt
Learning/CMakeLearning/CMake_GTest_FetchContent/scripts/: build.sh  gen_test_report.py
Learning/CMakeLearning/CMake_GTest_FetchContent/tests/: CMakeLists.txt  multiply_test.cpp
Learning/CMakeLearning/CMake_GTest_Submodules/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  person.cpp  person.hpp
Learning/CMakeLearning/CMake_GTest_Submodules/lib/person/: person.cpp
Learning/CMakeLearning/CMake_GTest_Submodules/scripts/: file_util.py  gen_test_report.py  gen_test_report_preset.py
Learning/CMakeLearning/CMake_GTest_Submodules/tests/: test_defaults.cpp
Learning/CPlusPlusConcurrencyInAction/: listing1.1.cpp  listing2.1.cpp  listing2.3.cpp  listing2.6.cpp  listing2.8.cpp  listing3.10  listing3.10.cpp  listing3.11  listing3.12.cpp  listing3.13  listing3.4  listing3.4.cpp  listing3.5  listing3.5.cpp  listing3.7  listing3.8  listing3.9  listing4.1  listing4.10.cpp  listing4.2  listing4.2.cpp  listing4.3  listing4.3.cpp  listing4.4  listing4.5  listing4.5.cpp  listing4.6  listing4.6.cpp  listing4.7  listing4.8.cpp  listing4.9.cpp
Learning/Udemy/Learn By Example C++ Programming - 75 Solved Problems/ComplexNumberExample/: CMakeLists.txt
Learning/Udemy/Learn By Example C++ Programming - 75 Solved Problems/NamespaceExample/: .gitignore  CMakeLists.txt
Learning/Udemy/Learn By Example C++ Programming - 75 Solved Problems/NamespaceExample/NamespaceExample/: CMakeLists.txt
Learning/Udemy/Learn By Example C++ Programming - 75 Solved Problems/ReferencesExample/: CMakeLists.txt
Learning/Udemy/Learn By Example C++ Programming - 75 Solved Problems/ReferencesExample/ReferencesExample/: CMakeLists.txt
Learning/Udemy/Learn By Example C++ Programming - 75 Solved Problems/SimpleCPlusPlusClass/SimpleCPlusPlusClass/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.h  SimpleCPlusPlusClass.cpp
Learning/Udemy/Learn By Example C++ Programming - 75 Solved Problems/SimpleCPlusPlusProgram/: CMakeLists.txt
Learning/Udemy/Master CMake for Cross-Platform C++ Project Building/MyPractice/: CMakeLists.txt  main.cpp
Learning/Youtube/LearnQtGuide/CMakeSeries/: Documents.txt
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep005/source/: CMakeLists.txt
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep005/source/include/: dog.h  operations.h
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep005/source/src/: operations.cpp
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep007/source/: CMakeLists.txt  main.cpp
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep007/source/include/: operations.h
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep007/source/src/: operations.cpp
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep021/: CMakeLists.txt  main.cpp  person.cpp
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep021/cmake/: AddFmt.cmake
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep031/: CMakeLists.txt  conanfile.py
Learning/Youtube/LearnQtGuide/CMakeSeries/Ep031/src/: foo.cpp
Learning/Youtube/LearnQtGuide/Cpp20/: Documents.txt
Learning/Youtube/LearnQtGuide/Cpp20/Ep01/: Ep01.sln  (+3 more)
Learning/Youtube/LearnQtGuide/VSC/: Documents.txt
Udemy/Learn By Example C++ Programming - 75 Solved Problems/: .gitignore
Udemy/Learn By Example C++ Programming - 75 Solved Problems/ComplexNumberExample/ComplexNumberExample/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.h  ComplexNumberPolar.h
Udemy/Learn By Example C++ Programming - 75 Solved Problems/DefaultValues/: CMakeLists.txt
Udemy/Learn By Example C++ Programming - 75 Solved Problems/DefaultValues/DefaultValues/: DefaultValues.cpp
Udemy/Learn By Example C++ Programming - 75 Solved Problems/FunctionOverloading/: CMakeLists.txt
Udemy/Learn By Example C++ Programming - 75 Solved Problems/FunctionOverloading/FunctionOverloading/: CMakeLists.txt
Udemy/Learn By Example C++ Programming - 75 Solved Problems/NamespaceExample/NamespaceExample/: NamespaceExample.cpp  NamespaceExample.h
Udemy/Learn By Example C++ Programming - 75 Solved Problems/ReferencesExample/ReferencesExample/: ReferencesExample.cpp  ReferencesExample.h
Udemy/Learn By Example C++ Programming - 75 Solved Problems/SimpleCPlusPlusClass/: CMakeLists.txt
(+155 files in other folders)
